css fix on mobile - pricing table comp

--- a/pages/areas/pricingTable.module.scss
+++ b/pages/areas/pricingTable.module.scss
@@ -59,6 +59,7 @@
       }
       .pricingTable {
         .tableTitle {
+          background: linear-gradient(45deg, rgba(255, 255, 255, 0) 10%, #2982e9 85%)
         }
         table {
           thead {
